--- a/pages/index.html
+++ b/pages/index.html
@@ -6,23 +6,17 @@ permalink: /
 <h1>Huistijlgids VOC Brasschaat-Kapellen</h1>
 
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Idem iste, inquam, de voluptate quid sentit? Istam voluptatem perpetuam quis potest praestare sapienti? Aliam vero vim voluptatis esse, aliam nihil dolendi, nisi valde pertinax fueris, concedas necesse est. Sed tamen enitar et, si minus multa mihi occurrent, non fugiam ista popularia. Sed ad bona praeterita redeamus. Duo Reges: constructio interrete. Atque ab isto capite fluere necesse est omnem rationem bonorum et malorum. Quamquam te quidem video minime esse deterritum. </p>
+<p>Welkom op de website waar je alle informatie terug kan vinden om de huisstijl van VOC Brasschaat-Kapellen correct toe te passen. </p>
 
-<p>Aliud igitur esse censet gaudere, aliud non dolere. Eorum enim omnium multa praetermittentium, dum eligant aliquid, quod sequantur, quasi curta sententia; Duae sunt enim res quoque, ne tu verba solum putes. Illi enim inter se dissentiunt. </p>
+<p>Via de menubalk kan je alle documentatie vinden die je nodig hebt. </p>
 
-<p><a href="http://loripsum.net/" target="_blank">Sed potestne rerum maior esse dissensio?</a> Quid, de quo nulla dissensio est? Etenim semper illud extra est, quod arte comprehenditur. Cuius ad naturam apta ratio vera illa et summa lex a philosophis dicitur. Eam tum adesse, cum dolor omnis absit; Eaedem enim utilitates poterunt eas labefactare atque pervertere. </p>
-
-<h2>Ne in odium veniam.</h2>
     
-<p>Pisone in eo gymnasio, quod Ptolomaeum vocatur, unaque nobiscum Q. Videmus igitur ut conquiescere ne infantes quidem possint. Qui-vere falsone, quaerere mittimus-dicitur oculis se privasse; <a href="http://loripsum.net/" target="_blank">Quibusnam praeteritis?</a> <a href="http://loripsum.net/" target="_blank">Omnia peccata paria dicitis.</a> Praetereo multos, in bis doctum hominem et suavem, Hieronymum, quem iam cur Peripateticum appellem nescio. Neque enim disputari sine reprehensione nec cum iracundia aut pertinacia recte disputari potest. Quid affers, cur Thorius, cur Caius Postumius, cur omnium horum magister, Orata, non iucundissime vixerit? Aliter homines, aliter philosophos loqui putas oportere? <mark>Age, inquies, ista parva sunt.</mark> </p>
-
-<ul>
-	<li>Hominum non spinas vellentium, ut Stoici, nec ossa nudantium, sed eorum, qui grandia ornate vellent, enucleate minora dicere.</li>
-	<li>Nam diligi et carum esse iucundum est propterea, quia tutiorem vitam et voluptatem pleniorem efficit.</li>
-	<li>Quem si tenueris, non modo meum Ciceronem, sed etiam me ipsum abducas licebit.</li>
-	<li>Naturales divitias dixit parabiles esse, quod parvo esset natura contenta.</li>
-	<li>Tum, Quintus et Pomponius cum idem se velle dixissent, Piso exorsus est.</li>
-	<li>Huic ego, si negaret quicquam interesse ad beate vivendum quali uteretur victu, concederem, laudarem etiam;</li>
+<p>Je vindt hier alle documentatie met betreffing tot volgende ontwerpen</p>
+	<li>Logo</li>
+	<li>Kleurgebruik</li>
+	<li>Tekstgebruik</li>
+	<li>Template voor de folder</li>
+	<li>Template voor de Snaveltjeskrant</li>
 </ul>
 
 
